--- a/render.yaml
+++ b/render.yaml
@@ -21,3 +21,5 @@ services:
         generateValue: true
       - key: WEB_CONCURRENCY
         value: 4
+      - key: DJANGO_SETTINGS_MODULE
+        value: core.settings.production
