--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,21 @@
 asgiref==3.8.1
 Brotli==1.1.0
 certifi==2025.1.31
+charset-normalizer==3.4.1
 click==8.1.8
 cloudinary==1.44.0
 colorama==0.4.6
 dj-database-url==2.3.0
 Django==5.2
+django-cloudinary-storage==0.3.0
 gunicorn==23.0.0
 h11==0.14.0
+idna==3.10
 packaging==24.2
 pillow==11.1.0
 psycopg2-binary==2.9.10
 python-dotenv==1.1.0
+requests==2.32.3
 six==1.17.0
 sqlparse==0.5.3
 typing_extensions==4.13.2
