--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ idna==3.10
 packaging==24.2
 pillow==11.1.0
 psycopg2-binary==2.9.10
+python-decouple==3.8
 python-dotenv==1.1.0
 requests==2.32.3
 six==1.17.0
